2022-11-01T08:09:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3367843168 # 988
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 137 652 / 144 667
* notice: next accum: outdated-unq outdated-all / unq all: 138 653 / 144 667
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-18] / []

2022-10-31T08:10:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3359623348 # 985
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 137 652 / 143 662
* notice: next accum: outdated-unq outdated-all / unq all: 137 652 / 144 667
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
* notice: removed / changed dates: [] / [2022-10-31]

2022-10-29T16:06:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3352082002 # 980
* notice: last 14d: unq all: 6 10
* notice: prev accum: outdated-unq outdated-all / unq all: 136 650 / 142 660
* notice: next accum: outdated-unq outdated-all / unq all: 137 652 / 143 662
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-15] / [2022-10-29]

2022-10-28T16:08:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3346851083 # 977
* notice: last 14d: unq all: 6 10
* notice: prev accum: outdated-unq outdated-all / unq all: 135 649 / 141 658
* notice: next accum: outdated-unq outdated-all / unq all: 136 650 / 142 660
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-14] / [2022-10-28]

2022-10-26T16:08:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3330665488 # 971
* notice: last 14d: unq all: 6 9