@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-01T08:09:54Z",
+  "timestamp" : "2022-11-01T16:08:55Z",
   "count_outdated" : 653,
   "uniques_outdated" : 138,
-  "count" : 667,
-  "uniques" : 144,
+  "count" : 677,
+  "uniques" : 145,
   "views" : [
     {
       "timestamp": "2022-10-25T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 5,
       "count_minmax": [ 5, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-01T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 10, 10 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
