@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 6,
+  "count": 24,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2022-10-25T00:00:00Z",
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-01T00:00:00Z",
+      "count": 10,
       "uniques": 1
     }
   ]
